@@ -1,7 +1,8 @@
-<h5>3.05 RC2   [2021-10-13]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
+<h5>3.5.0 RC2   [2021-10-13]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
  - added icon for clone (goffy)
  - added feature to clone module (mamba/goffy)
+ - semantic versioning (mamba)
 
 <h5>3.05 RC1   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
